src/xcp/xcplib.rs

/* automatically generated by rust-bindgen 0.71.1 */

unsafe extern "C" {
    #[doc = " Initialize the XCP on Ethernet server singleton.\n @pre User has called XcpInit.\n @param address Address to bind to.\n @param port Port to bind to.\n @param use_tcp Use TCP if true, otherwise UDP.\n @param measurement_queue_size Measurement queue size in bytes. Includes the bytes occupied by the queue header and some space needed for alignment.\n @return true on success, otherwise false."]
    pub fn XcpEthServerInit(address: *const u8, port: u16, use_tcp: bool, measurement_queue_size: u32) -> bool;
}
unsafe extern "C" {
    #[doc = " Shutdown the XCP on Ethernet server."]
    pub fn XcpEthServerShutdown() -> bool;
}
unsafe extern "C" {
    #[doc = " Get the XCP on Ethernet server instance status.\n @return true if the server is running, otherwise false."]
    pub fn XcpEthServerStatus() -> bool;
}
#[doc = " Calibration segment handle"]
pub type tXcpCalSegIndex = u16;
#[doc = " Calibration segment number (for XCP and A2L)"]
pub type tXcpCalSegNumber = u8;
unsafe extern "C" {
    #[doc = " Create a calibration segment and add it to the list of calibration segments.\n This calibration segment has a working page (RAM) and a reference page (FLASH), it creates a MEMORY_SEGMENT in the A2L file\n It provides safe (thread safe against XCP modifications), lock-free and consistent atomic access to calibration parameters\n It supports XCP/ECU independent page switching, checksum calculation, copy and reinitialization (copy reference page to working page)\n @param name Name of the calibration segment.\n @param default_page Pointer to the default page.\n @param size Size of the calibration page in bytes.\n @return a handle or XCP_UNDEFINED_CALSEG when out of memory or the name already exists."]
    pub fn XcpCreateCalSeg(name: *const ::std::os::raw::c_char, default_page: *const ::std::os::raw::c_void, size: u16) -> tXcpCalSegIndex;
}
unsafe extern "C" {
    #[doc = " Get the number of calibration segments\n @return the number of calibration segments and blocks"]
    pub fn XcpGetCalSegCount() -> u16;
}
unsafe extern "C" {
    #[doc = " Find a calibration segment by name\n @param name Name of the calibration segment or block\n @return the Handle of the calibration segment or XCP_UNDEFINED_CALSEG if not found"]
    pub fn XcpFindCalSeg(name: *const ::std::os::raw::c_char) -> tXcpCalSegIndex;
}
unsafe extern "C" {
    #[doc = " Get the name of the calibration segment\n @param index Handle of the calibration segment or block\n @return the name of the calibration segment or NULL if the index is invalid."]
    pub fn XcpGetCalSegName(index: tXcpCalSegIndex) -> *const ::std::os::raw::c_char;
}
unsafe extern "C" {
    #[doc = " Get the size of the calibration segment\n @param calseg Handle of the calibration segment or block\n @return the size of the calibration segment in bytes"]
    pub fn XcpGetCalSegSize(calseg: tXcpCalSegIndex) -> u16;
}
unsafe extern "C" {
    #[doc = " Get the number of the calibration segment\n @param calseg Handle of the calibration segment\n @return the number of the calibration segment, calibration blocks don't have a number and return XCP_UNDEFINED_CALSEG_NUM"]
    pub fn XcpGetCalSegNumber(calseg: tXcpCalSegIndex) -> tXcpCalSegNumber;
}
unsafe extern "C" {
    #[doc = " Lock a calibration segment.\n @param index Calibration segment index.\n @return Pointer to the active page of the calibration segment (working page or reference page, controlled by the XCP client tool).\n The pointer is valid until the calibration segment is unlocked.\n The data can be safely accessed while the lock is held.\n There is no contention with the XCP client tool and with other threads acquiring the lock.\n Acquiring the lock is wait-free, locks may be recursive"]
    pub fn XcpLockCalSeg(index: tXcpCalSegIndex) -> *const u8;
}
unsafe extern "C" {
    #[doc = " Unlock a calibration segment"]
    pub fn XcpUnlockCalSeg(index: tXcpCalSegIndex) -> u8;
}
#[doc = " DAQ event id as handle"]
pub type tXcpEventId = u16;
unsafe extern "C" {
    #[doc = " Trigger the XCP event 'event' for absolute or dyn addressing mode with explicitly given base address (address extension = 2)\n @param event\n @param base address pointer"]
    pub fn XcpEventExt(event: tXcpEventId, base2: *const u8);
}
unsafe extern "C" {
    #[doc = " Set log level\n Does not require XCP to be initialized yet\n Log level 4 provides a trace of all XCP commands and responses.\n @param level (0 = no logging, 1 = error, 2 = warning, 3 = info, 4 = debug, 5 = trace)"]
    pub fn XcpSetLogLevel(level: u8);
}
unsafe extern "C" {
    #[doc = " Initialize the XCP driver singleton, must be called before starting the server\n @param name Project name, used as A2L file name and to identify the XCP server\n @param epk EPK version string, used for compatibility check of A2L and BIN file\n @param mode XCP_MODE_DEACTIVATE, XCP_MODE_LOCAL, XCP_MODE_SHM, XCP_MODE_SHM_AUTO or XCP_MODE_SHM_SERVER (libxcplite build with in SHM mode)"]
    pub fn XcpInit(name: *const ::std::os::raw::c_char, epk: *const ::std::os::raw::c_char, mode: u8) -> bool;
}
unsafe extern "C" {
    pub fn XcpDeinit();
}
unsafe extern "C" {
    pub fn XcpSetA2lName(name: *const ::std::os::raw::c_char);
}
unsafe extern "C" {
    #[doc = " Force Disconnect\n Stop DAQ, flush queue, flush pending calibrations"]
    pub fn XcpDisconnect();
}
unsafe extern "C" {
    #[doc = " Send terminate session event to the XCP client\n Force the XCP client to terminate the session"]
    pub fn XcpSendTerminateSessionEvent();
}
unsafe extern "C" {
    #[doc = " Send a message to the XCP client\n @param str Message to send, appears in the XCP client write log window"]
    pub fn XcpPrint(str_: *const ::std::os::raw::c_char);
}
unsafe extern "C" {
    #[doc = " Get the current DAQ clock value\n @return time in CLOCK_TICKS_PER_S units\n Resolution and epoch is defined in xcplib_cfg.h\n Epoch may be PTP or arbitrary\n Resolution is 1ns or 1us"]
    pub fn ApplXcpGetClock64() -> u64;
}
unsafe extern "C" {
    pub fn ApplXcpRegisterConnectCallback(cb_connect: ::std::option::Option<unsafe extern "C" fn(mode: u8) -> bool>);
}
